Cross compiling to Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project (wxGraphStructure)
 enable_language(C)
 enable_language(CXX)
 
+# Options
+#   Usage: cmake -D<option name>=<value> <directory>
+option(C_LANG_VERSION   "c11")
+option(CXX_LANG_VERSION "c++11")
+
 # Find all source and header files
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c")
 file(GLOB_RECURSE HEADERS "src/*.hpp")
@@ -12,8 +17,8 @@ set (INCLUDE_DIRS "src")
 
 include_directories(${INCLUDE_DIRS})
 
-SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c11")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=${C_LANG_VERSION}")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=${CXX_LANG_VERSION}")
 
 ADD_DEFINITIONS(
 	-Wall
